iptables-template
# Generated by iptables-save v1.4.21 on Mon Jul  9 14:32:40 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -s 47.75.135.70/32 -j ACCEPT
-A INPUT -s 13.114.147.87/32 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m set --match-set ping src -j ACCEPT
-A INPUT -p icmp -j DROP
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m set --match-set ssh src -m tcp --dport 6266 -j ACCEPT
-A INPUT -p tcp -m set --match-set zabbix src -m tcp --dport 10050 -j ACCEPT
-A INPUT -p tcp -m set --match-set logstash src -m tcp --dport 9200 -j ACCEPT
-A INPUT -p tcp -m set --match-set dev-office src -m tcp --dport 5601 -j ACCEPT
-A INPUT -p tcp -m set --match-set es-node src -m tcp --dport 9200 -j ACCEPT
-A INPUT -p tcp -m set --match-set es-node src -m tcp --dport 9300 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Mon Jul  9 14:32:40 201
